tests/errors/evaluate_void.c
int main()
{
	(void)0; /* okay */
	int a = (void)1;
}